# antsibull-docs-parser

./: .flake8  .pylintrc.automated  CHANGELOG.md  CHANGELOG.md.license  CHANGELOG.rst  README.md  codecov.yml  docs-requirements.txt  mkdocs.yml  noxfile.py  pyproject.toml  test-vectors.yaml
.github/: dependabot.yml
.github/workflows/: nox.yml  reuse.yml
changelogs/: changelog.yaml  config.yaml
changelogs/fragments/: 0.0.1.yml  0.1.0.yml  0.2.0.yml  0.4.0.yml  1.0.0.yml  1.1.0.yml  1.2.0.yml  15-lint.yml  16-create-vectors.yml  17-ansible-doc-text.yml  18-source.yml  19-helpful-errors.yml  20-rst-plain.yml  24-urls-md.yml  37-md-link-escape.yml  51-rst.yml  53-escaping.yml  54-whitespace.yml  56-postprocess.yml  65-rst-pipe.yml  68-python.yml  71-fqcn-upper-case.yml  72-extend-ansible-markup.yml  72-fix.yml  74-fix.yml  75-python.yml  9-semantic-markup-roles.yml  python-3.12.yml  python-3.13.yml
docs/: changelog.md  index.md  python-api.md  specification.md
src/antsibull_docs_parser/: __init__.py  _parser_impl.py  ansible_doc_text.py  dom.py  format.py  html.py  md.py  parser.py  rst.py
tests/unit/: create-vectors.py  test_ansible_doc_text.py  test_dom.py  test_format.py  test_html.py  test_markup.py  test_md.py  test_parser.py  test_parser_impl.py  test_rst.py  test_vectors.py  vectors.py
